Fix footer and small changes to alignment

--- a/style.scss
+++ b/style.scss
@@ -144,6 +144,18 @@ i {
   text-decoration: none;
 }
 
+.card-img-overlay-grid > .card-text,
+.card-img-overlay-grid > .card-text > a {
+  position: absolute;
+  padding: 6px 15px 6px 15px;
+  bottom: 0;
+  left: 0;
+  color: blue;
+  font-size: 14px;
+  background: rgba(300, 300, 300, 0.8);
+  text-decoration: none;
+}
+
 .card {
   border: 0 transparent solid;
 }
